# PARTHENON-CHAIN

./: .codecov.yml  .gitignore  BUILD_AND_WORKFLOW_ERRORS_FIXED.md  CHANGELOG.md  CMakeLists.txt  CODE_EFFICIENCY_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ECONOMICS.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION-SUMMARY.md  INSTALL.md  LICENSE  Makefile  README.md  REPOSITORY-STATUS-UPDATE.md  REVIEW-SUMMARY.md  ROADMAP.md  SECURITY-AUDIT-FINDINGS.md  SECURITY.md  TASK-ANALYSIS-SUMMARY.md  TASK-COMPLETION-SUMMARY.md  bounty.json  docker-compose.yml  nft_spec.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codecov.yaml  codeql.yml  coverage.yml  explorer.yml  mobile-client.yml  qt-wallet-installer.yml  release.yml  windows-installer.yml
assets/: README.md  asset_metadata.json
common/config/: config.cpp
common/log/: log.cpp
contrib/desktop/: drachma-qt.desktop
contrib/gitian-descriptors/: README.md  gitian-win.yml
doc/: BRANDING-GUIDE.md  CONTRIBUTING.md  FAQ.md  GENESIS-MINING.md  GITIAN-BUILD-GUIDE.md  INSTALL.md  PERFORMANCE-GUIDE.md  PERFORMANCE-OPTIMIZATIONS.md  PROFESSIONAL-ASSETS-GUIDE.md  PROJECT-COMPLETION-TASKS.md  QUICK-TASK-SUMMARY.md  README.md  TROUBLESHOOTING.md  fees.md  finality.md  install.md  obolos.md
doc/assets/: announcement-template.md
doc/improvements/: OPTIMIZATION-BRANDING-SUMMARY.md
doc/man/: drachma-cli.1  drachma-qt.1  drachmad.1
doc/operators/: deployment.md
doc/reference/: architecture.md  economics.md  whitepaper.md
doc/security/: AUDIT.md  SECURITY-AUDIT-REPORT.md
doc/technical-specs/: asset-model.md  sidechain-spec.md  technical-spec.md
docs/: AUDIT.md  BUILD-PROCESS.md  FAQ.md  LAUNCH-ACTION-ITEMS.md  MAINNET-READINESS.md  MINING-GUIDE.md  README.md  RPC-TESTING.md  TESTING-PROCEDURES.md  TROUBLESHOOTING.md  WALLET-RECOVERY-TESTING.md  architecture.md  audit-guide.md  audit_guide.md  building.md  deployment.md  fair-launch.md  mining-guide.md  multi-asset-upgrade-plan.md  nfts.md  release-checklist.md  release-testing.md  roadmap.md  smart_contracts.md  technical-spec.md  whitepaper.md
docs/assets/: README.md  announcement-template.md  release-checklist.md  ui-snapshots.md
docs/developer-guides/: README.md  api-reference.md  api.md  crosschain.md  dapps.md  nfts.md
docs/getting-started/: README.md  gui-user-guide.md  quickstart.md
docs/improvements/: FINAL-SUMMARY.md  README.md  SUMMARY.md  code-enhancements.md
docs/operators/: README.md  deployment.md
docs/reference/: README.md  architecture.md  economics.md  fair-launch.md  whitepaper.md
docs/security/: README.md  audit-checklist.md  audit-guide.md  security-notes.md  security-overview.md  threat-model.md
docs/technical-specs/: README.md  asset-model.md  multi-asset-upgrade-plan.md  nft-specification.md  technical-spec.md
docs/user-guides/: README.md  mining-guide.md
explorer/: Dockerfile  app.py  index.html  nginx.conf  style.css
explorer/templates/: address.html  block.html  index.html  tx.html
layer1-core/: drachma_cli.cpp  drachmad.cpp
layer1-core/block/: block.cpp  block.h
layer1-core/chainstate/: coins.cpp  coins.h  undo.h
layer1-core/consensus/: fork_resolution.cpp  fork_resolution.h  genesis.cpp  params.cpp  params.h
layer1-core/crypto/: schnorr.cpp  schnorr.h  tagged_hash.cpp  tagged_hash.h
layer1-core/merkle/: merkle.cpp
layer1-core/pow/: difficulty.cpp  difficulty.h  difficulty_adjust.cpp  sha256d.cpp  sha256d.h
layer1-core/script/: interpreter.cpp  interpreter.h
layer1-core/storage/: blockstore.cpp
layer1-core/tx/: transaction.cpp  transaction.h  txin.h  txout.h
layer1-core/validation/: anti_dos.cpp  anti_dos.h  connect_block.cpp  validation.cpp  validation.h
layer2-services/crosschain/: README.md
layer2-services/index/: txindex.cpp  txindex.h
layer2-services/mempool/: mempool.cpp  mempool.h
layer2-services/net/: p2p.cpp  p2p.h
layer2-services/policy/: policy.cpp  policy.h
layer2-services/rpc/: rpcserver.cpp  rpcserver.h
layer2-services/wallet/: wallet.cpp  wallet.h
layer3-app/assets/: README.md
layer3-app/qt/: main.cpp  nft_ui_helpers.h  nftgallery.cpp  nftgallery.h  sidechainview.cpp
layer3-app/resources/: icons.qrc
mainnet/: README.md  checkpoints.json  config.sample.conf  genesis.cpp  genesis.json  launch-notes.md  launch.sh  seeds.json
miners/: README.md  miner_config.example.json  stratum.cpp  stratum.h  stratum_pool.cpp
miners/cpu/: main.cpp
miners/gpu-cuda/: host.cpp  host_old.cpp  kernel.cu
miners/gpu-opencl/: host.cpp  kernel.cl  sha256d.cl
mobile-client/: .env.example  .eslintrc.js  App.tsx  COMPLETION_SUMMARY.md  ICONS.md  MOBILE_MINING.md  README.md  SETUP.md  STRUCTURE.md  STRUCTURE.txt  app.json  jest.config.js  jest.setup.js  metro.config.js  mobile_miner_config.example.json  package-lock.json  package.json  tsconfig.json  types.d.ts
mobile-client/__tests__/: README.md  components.test.tsx  crypto.test.ts  integration.test.tsx  screens.test.tsx  utils.test.ts
mobile-client/android/: README.md  build.gradle  gradle.properties
mobile-client/assets/: README.md
mobile-client/ios/: Podfile  README.md
scripts/: README.md  bootstrap.sh  build.sh  extended-validation.py  gitian-setup.sh  install-linux.sh  install-macos.sh  install-windows.ps1  node_monitor.py  run-node.sh  start-testnet-cluster.sh  sync_verify.sh  test.sh  verify-build-test.sh  verify-genesis.sh  verify-sync.sh
sidechain/: sidechain_spec.md
sidechain/contracts/: README.md
sidechain/dapps/: README.md
sidechain/evm/: evm.cpp
sidechain/nfts/: README.md
sidechain/rpc/: wasm_rpc.cpp  wasm_rpc.h
sidechain/state/: state_store.cpp  state_store.h
testnet/: README.md  dashboard.html  faucet.py  genesis.cpp  genesis.json  seeds.json
testnet/monitoring/: README.md  grafana_dashboard.json  prometheus.yml
tests/chainstate/: chainstate_tests.cpp
tests/consensus/: asset_policy_test.cpp  fork_resolution_test.cpp  fuzz_fork_resolution.cpp  supply_test.cpp
(+123 files in other folders)
